# golem_toolkit

./: LICENSE  README.md  pyproject.toml
MHDapp/: app.py  requirements.txt  run_app.bat
MHDapp/config/: app_defaults.yaml  constants.yaml  urls.yaml
MHDapp/processing/: signal_processing.py  utils.py
src/golem_toolkit/: __init__.py
src/golem_toolkit/hello_package/: hello.py
src/golem_toolkit/loading/: DAS_systems.py  __init__.py  basic.py  test.py
src/golem_toolkit/test_package/: hello.py
tests/: pytest.ini  test_hello.py
tests/hello/: test_hello.py
tests/loading/: test_DAS_loading.py  test_basic_loading.py
