[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "golem-toolkit"
description = "GOLEM toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Václav Sedmidubský", email = "vasek7d@gmail.com" }]
dynamic = ["version"]
keywords = ["tokamak", "GOLEM", "diagnostics", "plasma", "DAS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vasek7d/golem_toolkit"
Issues = "https://github.com/vasek7d/golem_toolkit/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "build", "twine", "ruff", "mypy"]

[tool.hatch.build.targets.sdist]
include = ["src/golem_toolkit", "README.md", "LICENSE", "tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [{ include = "golem_toolkit", from = "src" }]